--- a/index.html
+++ b/index.html
@@ -891,8 +891,8 @@
                     <h5 class="mb-3" style="color: white;">Contacto</h5>
                     <ul class="list-unstyled">
                         <li class="mb-2"><i class="fas fa-envelope me-2"></i> info@dentalcarepro.com</li>
-                        <li class="mb-2"><i class="fas fa-phone me-2"></i> (809) 555-1234</li>
-                        <li class="mb-2"><i class="fas fa-map-marker-alt me-2"></i> Santo Domingo, RD</li>
+                        <li class="mb-2"><i class="fas fa-phone me-2"></i> (899) 125-9003</li>
+                        <li class="mb-2"><i class="fas fa-map-marker-alt me-2"></i> Reynosa, Tamaulipas</li>
                     </ul>
                 </div>
             </div>
@@ -902,7 +902,7 @@
                     <p class="mb-0">© 2023 DentalCare Pro. Todos los derechos reservados.</p>
                 </div>
                 <div class="col-md-6 text-md-end">
-                    <p class="mb-0">Desarrollado por: Ismel Amaury AM | Matrícula: 20231886</p>
+                    <p class="mb-0">Desarrollado por: Daniel Ramos | Matrícula: 20231886</p>
                 </div>
             </div>
         </div>
